# ViewerJS

./: CMakeLists.txt  HeaderCompiled.html  HeaderCompiled.js  ImageViewerPlugin.css  ImageViewerPlugin.js  LICENSE  MultimediaViewerPlugin.js  ODFViewerPlugin.css  ODFViewerPlugin.js  PDFViewerPlugin.css  PDFViewerPlugin.js  PluginLoader.js  README  README.md  TextLayerBuilder.js  bower.json  index-template.html  index.html  params.json  pdfjsversion.js.in  viewer.css  viewer.js  viewer.scss  viewerTouch.css  viewerjs-plugin-README.txt  viewerjs-plugin.php.in  viewerjsversion.js.in  webodf.js
tools/: replaceByFileContents.js
